Fix visual bug on iOS

--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -132,6 +132,7 @@
 
 .c-search__result-link {
     display: flex;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 10px;
 }
